--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   google_fonts: ^6.2.1
   country_flags: ^3.3.0
   dropdown_button2: ^2.3.9
+  flutter_svg: ^2.2.0
+  smooth_page_indicator: ^1.2.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +72,8 @@ flutter:
     - assets/socialmedia/
     - assets/selectLocation/
     - assets/marketlogo/
+    - assets/bottomnavigationbar/
+    - assets/home/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
