--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_svg: ^2.2.0
   smooth_page_indicator: ^1.2.1
   flutter_rating_bar: ^4.0.1
+  image_picker: ^1.0.7
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
