--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,5 @@
+source 'https://cdn.cocoapods.org/'
+
 platform :ios, '14.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
@@ -30,24 +32,12 @@ target 'Runner' do
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   
-  # BEST SOLUTION: Force ALL GoogleUtilities components to use version 7.12
-  # This is the highest version that's compatible with all Firebase dependencies
-  pod 'GoogleUtilities', '7.12.0'
-  pod 'GoogleUtilities/Environment', '7.12.0'
-  pod 'GoogleUtilities/Logger', '7.12.0'
-  pod 'GoogleUtilities/MethodSwizzler', '7.12.0'
-  pod 'GoogleUtilities/ISASwizzler', '7.12.0'
-  pod 'GoogleUtilities/Network', '7.12.0'
-  pod 'GoogleUtilities/Reachability', '7.12.0'
-  pod 'GoogleUtilities/UserDefaults', '7.12.0'
-  pod 'GoogleUtilities/AppDelegateSwizzler', '7.12.0'
-  pod 'GoogleUtilities/Device', '7.12.0'
-  pod 'GoogleUtilities/NSData+zlib', '7.12.0'
-  pod 'GoogleUtilities/NSURLSession', '7.12.0'
-  pod 'GoogleUtilities/Swizzler', '7.12.0'
+  # BEST PRACTICE: Use flexible version constraint for GoogleUtilities
+  # This allows CocoaPods to resolve the best compatible version
+  pod 'GoogleUtilities', '~> 7.12'
   
   # Force AppCheckCore to use a compatible version
-  pod 'AppCheckCore', '11.0.0'
+  pod 'AppCheckCore', '~> 11.0'
 end
 
 post_install do |installer|
@@ -87,12 +77,6 @@ post_install do |installer|
       # Additional build settings for better compatibility
       config.build_settings['ENABLE_BITCODE'] = 'NO'
       config.build_settings['SWIFT_VERSION'] = '5.0'
-      
-      # Force GoogleUtilities version for this target if it's a GoogleUtilities target
-      if target.name.include?('GoogleUtilities')
-        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)']
-        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'GOOGLEUTILITIES_VERSION=7.12.0'
-      end
     end
   end
 end
