--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,22 +1,30 @@
 workflows:
-  build-fouda-market:
-    name: Build Fouda Market App
+  build_app:
+    name: Build FoudaMarket App
+    max_build_duration: 60
     environment:
       flutter: stable
       xcode: latest
     scripts:
-      - name: Install dependencies
+      - name: Get Flutter dependencies
         script: |
           flutter pub get
+
+      - name: Install CocoaPods dependencies (iOS)
+        script: |
           cd ios
-          pod install --repo-update
+          pod repo update
+          pod install
           cd ..
-      - name: Build iOS
+
+      - name: Build iOS app
         script: |
           flutter build ios --release --no-codesign
-      - name: Build Android
+
+      - name: Build Android app
         script: |
           flutter build apk --release
     artifacts:
+      - build/ios/iphoneos/*.app
+      - build/ios/ipa/*.ipa
       - build/app/outputs/flutter-apk/app-release.apk
-      - build/ios/iphoneos/Runner.app
