--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -13,8 +13,7 @@ workflows:
       - name: Install CocoaPods dependencies (iOS)
         script: |
           cd ios
-          pod repo update
-          pod install
+          pod install --repo-update
           cd ..
 
       - name: Build iOS app
