--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,9 +10,12 @@ workflows:
         script: |
           flutter pub get
 
-      - name: Install CocoaPods dependencies (iOS)
+      - name: Clean and update CocoaPods (iOS)
         script: |
           cd ios
+          pod deintegrate
+          pod cache clean --all
+          rm -rf Pods Podfile.lock
           pod install --repo-update
           cd ..
 
@@ -23,6 +26,7 @@ workflows:
       - name: Build Android app
         script: |
           flutter build apk --release
+
     artifacts:
       - build/ios/iphoneos/*.app
       - build/ios/ipa/*.ipa
