--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,6 +16,7 @@ workflows:
           pod deintegrate
           pod cache clean --all
           rm -rf Pods Podfile.lock
+          pod repo update
           pod install --repo-update
           cd ..
 
