--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -29,6 +29,11 @@ workflows:
           pod install --repo-update
           cd ..
 
+      - name: Print Flutter and Xcode versions
+        script: |
+          flutter --version
+          xcodebuild -version
+
       - name: Build iOS app
         script: |
           flutter build ios --release --no-codesign
