--- a/ios/Podfile
+++ b/ios/Podfile
@@ -72,6 +72,18 @@ post_install do |installer|
       # Additional build settings for better compatibility
       config.build_settings['ENABLE_BITCODE'] = 'NO'
       config.build_settings['SWIFT_VERSION'] = '5.0'
+      
+      # Fix for unsupported option '-G' error
+      config.build_settings['OTHER_CFLAGS'] = '$(inherited)'
+      config.build_settings['OTHER_CPLUSPLUSFLAGS'] = '$(inherited)'
+      
+      # Remove any problematic compiler flags
+      if config.build_settings['OTHER_CFLAGS'].include?('-G')
+        config.build_settings['OTHER_CFLAGS'] = config.build_settings['OTHER_CFLAGS'].gsub(/-G\S*\s*/, '')
+      end
+      if config.build_settings['OTHER_CPLUSPLUSFLAGS'].include?('-G')
+        config.build_settings['OTHER_CPLUSPLUSFLAGS'] = config.build_settings['OTHER_CPLUSPLUSFLAGS'].gsub(/-G\S*\s*/, '')
+      end
     end
   end
 end
