--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,7 +32,6 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-  
 end
 
 post_install do |installer|
@@ -73,17 +72,38 @@ post_install do |installer|
       config.build_settings['ENABLE_BITCODE'] = 'NO'
       config.build_settings['SWIFT_VERSION'] = '5.0'
       
-      # Fix for unsupported option '-G' error
+      # Fix for unsupported option '-G' error - More aggressive approach
       config.build_settings['OTHER_CFLAGS'] = '$(inherited)'
       config.build_settings['OTHER_CPLUSPLUSFLAGS'] = '$(inherited)'
       
-      # Remove any problematic compiler flags
+      # Remove any problematic compiler flags that cause simulator build issues
       if config.build_settings['OTHER_CFLAGS'].include?('-G')
         config.build_settings['OTHER_CFLAGS'] = config.build_settings['OTHER_CFLAGS'].gsub(/-G\S*\s*/, '')
       end
       if config.build_settings['OTHER_CPLUSPLUSFLAGS'].include?('-G')
         config.build_settings['OTHER_CPLUSPLUSFLAGS'] = config.build_settings['OTHER_CPLUSPLUSFLAGS'].gsub(/-G\S*\s*/, '')
       end
+      
+      # Additional aggressive fixes for -G flag issues
+      config.build_settings['GCC_OPTIMIZATION_LEVEL'] = '0' if config.name == 'Debug'
+      config.build_settings['GCC_OPTIMIZATION_LEVEL'] = 's' if config.name == 'Release'
+      
+      # Ensure no problematic flags are inherited
+      config.build_settings['OTHER_CFLAGS'] = config.build_settings['OTHER_CFLAGS'].gsub(/-G\S*\s*/, '').strip
+      config.build_settings['OTHER_CPLUSPLUSFLAGS'] = config.build_settings['OTHER_CPLUSPLUSFLAGS'].gsub(/-G\S*\s*/, '').strip
+      
+      # Additional fixes for simulator compatibility
+      config.build_settings['CLANG_WARN_QUOTED_INCLUDE_IN_FRAMEWORK_HEADER'] = 'NO'
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)']
+      
+      # Ensure proper architecture settings for simulator
+      if config.build_settings['SDKROOT'] == 'iphoneos'
+        config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      end
+      
+      # Fix for Xcode 15+ compatibility
+      config.build_settings['DEAD_CODE_STRIPPING'] = 'YES'
+      config.build_settings['ENABLE_USER_SCRIPT_SANDBOXING'] = 'NO'
     end
   end
 end
