--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,15 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  
+  # Firebase dependencies - ensure proper linking
+  pod 'Firebase/Core'
+  pod 'Firebase/Auth'
+  pod 'Firebase/Firestore'
+  pod 'Firebase/Messaging'
+  pod 'Firebase/Analytics'
+  pod 'Firebase/Crashlytics'
+  pod 'Firebase/RemoteConfig'
 end
 
 post_install do |installer|
@@ -104,6 +113,14 @@ post_install do |installer|
       # Fix for Xcode 15+ compatibility
       config.build_settings['DEAD_CODE_STRIPPING'] = 'YES'
       config.build_settings['ENABLE_USER_SCRIPT_SANDBOXING'] = 'NO'
+      
+      # Firebase-specific fixes
+      config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+      config.build_settings['DEFINES_MODULE'] = 'YES'
+      
+      # Ensure proper module search paths
+      config.build_settings['FRAMEWORK_SEARCH_PATHS'] ||= ['$(inherited)']
+      config.build_settings['HEADER_SEARCH_PATHS'] ||= ['$(inherited)']
     end
   end
 end
